add some blog about dma framework
Signed-off-by: Bigyellow722 <lhkwqy@qq.com>

--- a/usb/usb-xhci-pci.org
+++ b/usb/usb-xhci-pci.org
@@ -11,14 +11,14 @@
 ** probe
 
 
-1) Init a *hc driver interface* (~struct hc_driver~) with ~xhci_init_driver~;
+- Init a *hc driver interface* (~struct hc_driver~) with ~xhci_init_driver~;
 
-2) Get hardware resoures from platform device or other ways.
+- Get hardware resoures from platform device or other ways.
 
-3) Create a *hcd* (~struct usb_hcd~) with ~__usb_create_hcd~ or ~usb_create_hcd~. The xhci register area is saved in the regs, rsrc_start and rsrc_len field of hcd.
+- Create a *hcd* (~struct usb_hcd~) with ~__usb_create_hcd~ or ~usb_create_hcd~. The xhci register area is saved in the regs, ~rsrc_start~ and ~rsrc_len~ field of hcd.
 
-4) Cause we use xhci protocol, the priv field of *hcd* should be set to *xhci hcd* (~struct xhci_hcd~).
-   1. get reg_clk and clk from platform_device and save them in the related fields in *xhci hcd*
+- Cause we use xhci protocol, the priv field of *hcd* should be set to *xhci hcd* (~struct xhci_hcd~).
+  1) get ~reg_clk~ and clk from ~platform_device~ and save them in the related fields in *xhci hcd*
 
 
 * xhci-pci driver
@@ -40,7 +40,10 @@
   }
 #+end_src
 
-In usb_hcd_pci_probe, if the usb controller implement as xhci controller, we don't need to alloc irqs for xhci driver. xhci driver has its own irq management.
+#+RESULTS:
+[[file:pic/xhci-pci-probe.png]]
+
+In ~usb_hcd_pci_probe~, if the usb controller implement as xhci controller, we don't need to alloc irqs for xhci driver. xhci driver has its own irq management.
 
 #+begin_src dot :file pic/usb_hcd_pci_probe.png
   digraph {
@@ -74,7 +77,9 @@ In usb_hcd_pci_probe, if the usb controller implement as xhci controller, we don
 
 #+end_src
 
+#+ATTR_HTML: :width 1000
+#+ATTR_HTML: :height 500
 #+RESULTS:
 [[file:pic/usb_hcd_pci_probe.png]]
 
-* xhci.c
+
